[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/Level_maze.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Mirror.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/next_W.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Nav2D.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Monster.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/tileset1.tres" type="TileSet" id=6]
[ext_resource path="res://Scenes/barrier.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/player.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Button_Area2D.tscn" type="PackedScene" id=9]

[sub_resource type="NavigationPolygon" id=1]

vertices = PoolVector2Array( 19.2485, 1584.62, 19.1505, 520.075, 19.2085, 521.967, 25.1607, 1463.99, 86.6975, 775.135, 86.0425, 1599.66, 80.4407, 1592.07, 80.1819, 1469.71, 79.9095, 771.868, 86.2083, 648.418, 30.8807, 1463.99, 31.1531, 640.307, 37.4179, 628.867, 37.6903, 897.708, 37.6589, 1020.54, 49.6923, 1599.93, 49.6923, 1801.26, 43.5467, 1790.93, 43.6637, 1607.34, 55.0766, 1472.79, 55.5294, 1147.69, 61.6841, 1157.44, 61.507, 1245.33, 62.2532, 1594.98, 43.063, 1018.68, 49.8707, 1027.09, 49.8707, 1472.79, 68.4732, 1601.31, 67.898, 1524.8, 73.9171, 1469.71, 37.6589, 1590.96, 32.2263, 1603.64, 67.4635, 1032.42, 73.6447, 897.708, 43.4103, 771.868, 52.5639, 630.816, 19.0171, 386.039, 74.1399, 381.285, 25.1607, 508.747, 13.6353, 242.198, 13.4723, 132.605, 85.8821, 125.756, 74.6273, 253.609, 86.2083, 505.907, 43.4103, 508.747, 52.1234, 518.276 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 4, 5, 6, 7, 8, 9 ), PoolIntArray( 10, 11, 12, 13, 14 ), PoolIntArray( 15, 16, 17, 18 ), PoolIntArray( 19, 20, 21, 22 ), PoolIntArray( 19, 22, 23 ), PoolIntArray( 15, 18, 24, 25, 26 ), PoolIntArray( 7, 6, 27, 28, 29 ), PoolIntArray( 10, 30, 31, 0, 3 ), PoolIntArray( 29, 28, 32, 33 ), PoolIntArray( 13, 33, 32, 25, 24 ), PoolIntArray( 9, 8, 34, 35 ), PoolIntArray( 26, 19, 23, 15 ), PoolIntArray( 2, 36, 37, 38 ), PoolIntArray( 39, 40, 41, 42 ), PoolIntArray( 42, 41, 43, 37 ), PoolIntArray( 35, 34, 44, 45 ), PoolIntArray( 37, 43, 45, 44 ), PoolIntArray( 37, 44, 38 ), PoolIntArray( 2, 38, 3 ), PoolIntArray( 14, 30, 10 ), PoolIntArray( 24, 14, 13 ) ]
outlines = [ PoolVector2Array( 13.4723, 132.605, 13.6353, 242.198, 74.6273, 253.609, 74.1399, 381.285, 19.0171, 386.039, 19.2085, 521.967, 19.1505, 520.075, 19.2485, 1584.62, 32.2263, 1603.64, 37.6589, 1590.96, 37.6589, 1020.54, 43.063, 1018.68, 43.6637, 1607.34, 43.5467, 1790.93, 49.6923, 1801.26, 49.6923, 1599.93, 62.2532, 1594.98, 61.507, 1245.33, 61.6841, 1157.44, 55.5294, 1147.69, 55.0766, 1472.79, 49.8707, 1472.79, 49.8707, 1027.09, 67.4635, 1032.42, 67.898, 1524.8, 68.4732, 1601.31, 80.4407, 1592.07, 86.0425, 1599.66, 86.6975, 775.135, 86.2083, 648.418, 52.5639, 630.816, 52.1234, 518.276, 86.2083, 505.907, 85.8821, 125.756 ), PoolVector2Array( 25.1607, 1463.99, 30.8807, 1463.99, 31.1531, 640.307, 37.4179, 628.867, 37.6903, 897.708, 73.6447, 897.708, 73.9171, 1469.71, 80.1819, 1469.71, 79.9095, 771.868, 43.4103, 771.868, 43.4103, 508.747, 25.1607, 508.747 ) ]

[node name="Node2D" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="Mirror" parent="." index="0" instance=ExtResource( 2 )]

position = Vector2( 748.587, 1532.83 )
rotation = 3.1322
z_index = 1
_sections_unfolded = [ "Collision", "Visibility", "Z Index" ]
mirrorDirection = "horizontal"

[node name="next_W" parent="." index="1" instance=ExtResource( 3 )]

position = Vector2( 1170.37, 1788.2 )

[node name="Nav2D" parent="." index="2" instance=ExtResource( 4 )]

[node name="Monster" parent="Nav2D" index="0" instance=ExtResource( 5 )]

position = Vector2( 305.043, 220.5 )
scale = Vector2( 0.984375, 0.984375 )

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Nav2D" index="1"]

position = Vector2( -576.208, -3.42477 )
scale = Vector2( 21, 1 )
navpoly = SubResource( 1 )
enabled = true

[node name="TileMap" type="TileMap" parent="." index="3"]

position = Vector2( -302.186, -2.27206 )
mode = 0
tile_set = ExtResource( 6 )
cell_size = Vector2( 64, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 0, 93, 0, 1, 93, 0, 2, 93, 0, 3, 93, 0, 4, 93, 0, 5, 93, 0, 6, 93, 0, 7, 93, 0, 8, 93, 0, 9, 93, 0, 10, 93, 0, 11, 93, 0, 12, 93, 0, 13, 93, 0, 14, 93, 0, 15, 93, 0, 16, 93, 0, 17, 93, 0, 18, 93, 0, 19, 93, 0, 20, 93, 0, 21, 93, 0, 22, 93, 0, 23, 93, 0, 24, 93, 0, 25, 93, 0, 65536, 93, 0, 65537, 93, 0, 65538, 93, 0, 65539, 93, 0, 65540, 93, 0, 65541, 93, 0, 65542, 93, 0, 65543, 93, 0, 65544, 93, 0, 65545, 93, 0, 65546, 93, 0, 65547, 93, 0, 65548, 93, 0, 65549, 93, 0, 65550, 93, 0, 65551, 93, 0, 65552, 93, 0, 65553, 93, 0, 65554, 93, 0, 65555, 93, 0, 65556, 93, 0, 65557, 93, 0, 65558, 93, 0, 65559, 93, 0, 65560, 93, 0, 65561, 93, 0, 131096, 93, 0, 131097, 93, 0, 196632, 93, 0, 196633, 93, 0, 262144, 93, 0, 262145, 93, 0, 262146, 93, 0, 262147, 93, 0, 262148, 93, 0, 262149, 93, 0, 262150, 93, 0, 262151, 93, 0, 262152, 93, 0, 262153, 93, 0, 262154, 93, 0, 262155, 93, 0, 262156, 93, 0, 262157, 93, 0, 262158, 93, 0, 262159, 93, 0, 262160, 93, 0, 262161, 93, 0, 262162, 93, 0, 262163, 93, 0, 262168, 93, 0, 262169, 93, 0, 327680, 93, 0, 327681, 93, 0, 327682, 93, 0, 327683, 93, 0, 327684, 93, 0, 327685, 93, 0, 327686, 93, 0, 327687, 93, 0, 327688, 93, 0, 327689, 93, 0, 327690, 93, 0, 327691, 93, 0, 327692, 93, 0, 327693, 93, 0, 327694, 93, 0, 327695, 93, 0, 327696, 93, 0, 327697, 93, 0, 327698, 93, 0, 327699, 93, 0, 327704, 93, 0, 327705, 93, 0, 393216, 93, 0, 393217, 93, 0, 393240, 93, 0, 393241, 93, 0, 458752, 93, 0, 458753, 93, 0, 458776, 93, 0, 458777, 93, 0, 524288, 93, 0, 524289, 93, 0, 524292, 93, 0, 524293, 93, 0, 524294, 93, 0, 524295, 93, 0, 524296, 93, 0, 524297, 93, 0, 524301, 93, 0, 524302, 93, 0, 524303, 93, 0, 524304, 93, 0, 524305, 93, 0, 524306, 93, 0, 524307, 93, 0, 524308, 93, 0, 524309, 93, 0, 524310, 93, 0, 524311, 93, 0, 524312, 93, 0, 524313, 93, 0, 589824, 93, 0, 589825, 93, 0, 589828, 93, 0, 589829, 93, 0, 589830, 93, 0, 589831, 93, 0, 589832, 93, 0, 589833, 93, 0, 589837, 93, 0, 589838, 93, 0, 589839, 93, 0, 589840, 93, 0, 589841, 93, 0, 589842, 93, 0, 589843, 93, 0, 589844, 93, 0, 589845, 93, 0, 589846, 93, 0, 589847, 93, 0, 589848, 93, 0, 589849, 93, 0, 655360, 93, 0, 655361, 93, 0, 655364, 93, 0, 655365, 93, 0, 655368, 93, 0, 655369, 93, 0, 655384, 93, 0, 655385, 93, 0, 720896, 93, 0, 720897, 93, 0, 720900, 93, 0, 720901, 93, 0, 720904, 93, 0, 720905, 93, 0, 720920, 93, 0, 720921, 93, 0, 786432, 93, 0, 786433, 93, 0, 786436, 93, 0, 786437, 93, 0, 786440, 93, 0, 786441, 93, 0, 786442, 93, 0, 786443, 93, 0, 786444, 93, 0, 786445, 93, 0, 786446, 93, 0, 786447, 93, 0, 786448, 93, 0, 786449, 93, 0, 786450, 93, 0, 786451, 93, 0, 786452, 93, 0, 786453, 93, 0, 786456, 93, 0, 786457, 93, 0, 851968, 93, 0, 851969, 93, 0, 851972, 93, 0, 851973, 93, 0, 851976, 93, 0, 851977, 93, 0, 851978, 93, 0, 851979, 93, 0, 851980, 93, 0, 851981, 93, 0, 851982, 93, 0, 851983, 93, 0, 851984, 93, 0, 851985, 93, 0, 851986, 93, 0, 851987, 93, 0, 851988, 93, 0, 851989, 93, 0, 851992, 93, 0, 851993, 93, 0, 917504, 93, 0, 917505, 93, 0, 917508, 93, 0, 917509, 93, 0, 917524, 93, 0, 917525, 93, 0, 917528, 93, 0, 917529, 93, 0, 983040, 93, 0, 983041, 93, 0, 983044, 93, 0, 983045, 93, 0, 983060, 93, 0, 983061, 93, 0, 983064, 93, 0, 983065, 93, 0, 1048576, 93, 0, 1048577, 93, 0, 1048580, 93, 0, 1048581, 93, 0, 1048584, 93, 0, 1048585, 93, 0, 1048588, 93, 0, 1048589, 93, 0, 1048590, 93, 0, 1048591, 93, 0, 1048592, 93, 0, 1048593, 93, 0, 1048596, 93, 0, 1048597, 93, 0, 1048600, 93, 0, 1048601, 93, 0, 1114112, 93, 0, 1114113, 93, 0, 1114116, 93, 0, 1114117, 93, 0, 1114120, 93, 0, 1114121, 93, 0, 1114124, 93, 0, 1114125, 93, 0, 1114126, 93, 0, 1114127, 93, 0, 1114128, 93, 0, 1114129, 93, 0, 1114132, 93, 0, 1114133, 93, 0, 1114136, 93, 0, 1114137, 93, 0, 1179648, 93, 0, 1179649, 93, 0, 1179652, 93, 0, 1179653, 93, 0, 1179656, 93, 0, 1179657, 93, 0, 1179660, 93, 0, 1179661, 93, 0, 1179664, 93, 0, 1179665, 93, 0, 1179668, 93, 0, 1179669, 93, 0, 1179672, 93, 0, 1179673, 93, 0, 1245184, 93, 0, 1245185, 93, 0, 1245188, 93, 0, 1245189, 93, 0, 1245192, 93, 0, 1245193, 93, 0, 1245196, 93, 0, 1245197, 93, 0, 1245200, 93, 0, 1245201, 93, 0, 1245204, 93, 0, 1245205, 93, 0, 1245208, 93, 0, 1245209, 93, 0, 1310720, 93, 0, 1310721, 93, 0, 1310724, 93, 0, 1310725, 93, 0, 1310728, 93, 0, 1310729, 93, 0, 1310732, 93, 0, 1310733, 93, 0, 1310736, 93, 0, 1310737, 93, 0, 1310740, 93, 0, 1310741, 93, 0, 1310744, 93, 0, 1310745, 93, 0, 1376256, 93, 0, 1376257, 93, 0, 1376260, 93, 0, 1376261, 93, 0, 1376264, 93, 0, 1376265, 93, 0, 1376268, 93, 0, 1376269, 93, 0, 1376272, 93, 0, 1376273, 93, 0, 1376276, 93, 0, 1376277, 93, 0, 1376280, 93, 0, 1376281, 93, 0, 1441792, 93, 0, 1441793, 93, 0, 1441796, 93, 0, 1441797, 93, 0, 1441800, 93, 0, 1441801, 93, 0, 1441804, 93, 0, 1441805, 93, 0, 1441808, 93, 0, 1441809, 93, 0, 1441812, 93, 0, 1441813, 93, 0, 1441816, 93, 0, 1441817, 93, 0, 1507328, 93, 0, 1507329, 93, 0, 1507336, 93, 0, 1507337, 93, 0, 1507344, 93, 0, 1507345, 93, 0, 1507352, 93, 0, 1507353, 93, 0, 1572864, 93, 0, 1572865, 93, 0, 1572872, 93, 0, 1572873, 93, 0, 1572880, 93, 0, 1572881, 93, 0, 1572888, 93, 0, 1572889, 93, 0, 1638400, 93, 0, 1638401, 93, 0, 1638402, 93, 0, 1638403, 93, 0, 1638404, 93, 0, 1638405, 93, 0, 1638406, 93, 0, 1638407, 93, 0, 1638408, 93, 0, 1638409, 93, 0, 1638412, 93, 0, 1638413, 93, 0, 1638414, 93, 0, 1638415, 93, 0, 1638416, 93, 0, 1638417, 93, 0, 1638418, 93, 0, 1638419, 93, 0, 1638420, 93, 0, 1638421, 93, 0, 1638422, 93, 0, 1638423, 93, 0, 1638424, 93, 0, 1638425, 93, 0, 1703936, 93, 0, 1703937, 93, 0, 1703938, 93, 0, 1703939, 93, 0, 1703940, 93, 0, 1703941, 93, 0, 1703942, 93, 0, 1703943, 93, 0, 1703944, 93, 0, 1703945, 93, 0, 1703948, 93, 0, 1703949, 93, 0, 1703950, 93, 0, 1703951, 93, 0, 1703952, 93, 0, 1703953, 93, 0, 1703954, 93, 0, 1703955, 93, 0, 1703956, 93, 0, 1703957, 93, 0, 1703958, 93, 0, 1703959, 93, 0, 1703960, 93, 0, 1703961, 93, 0, 1769472, 93, 0, 1769473, 93, 0, 1769496, 93, 0, 1769497, 93, 0, 1835008, 93, 0, 1835009, 93, 0, 1835032, 93, 0, 1835033, 93, 0, 1900544, 93, 0, 1900545, 93, 0, 1900546, 93, 0, 1900547, 93, 0, 1900548, 93, 0, 1900549, 93, 0, 1900550, 93, 0, 1900551, 93, 0, 1900552, 93, 0, 1900553, 93, 0, 1900554, 93, 0, 1900555, 93, 0, 1900556, 93, 0, 1900557, 93, 0, 1900558, 93, 0, 1900559, 93, 0, 1900560, 93, 0, 1900561, 93, 0, 1900562, 93, 0, 1900563, 93, 0, 1900564, 93, 0, 1900565, 93, 0, 1900566, 93, 0, 1900567, 93, 0, 1900568, 93, 0, 1900569, 93, 0, 1966080, 93, 0, 1966081, 93, 0, 1966082, 93, 0, 1966083, 93, 0, 1966084, 93, 0, 1966085, 93, 0, 1966086, 93, 0, 1966087, 93, 0, 1966088, 93, 0, 1966089, 93, 0, 1966090, 93, 0, 1966091, 93, 0, 1966092, 93, 0, 1966093, 93, 0, 1966094, 93, 0, 1966095, 93, 0, 1966096, 93, 0, 1966097, 93, 0, 1966098, 93, 0, 1966099, 93, 0, 1966100, 93, 0, 1966101, 93, 0, 1966102, 93, 0, 1966103, 93, 0, 1966104, 93, 0, 1966105, 93, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Barrier" parent="." index="4" instance=ExtResource( 7 )]

visible = false
position = Vector2( 814.069, 189.087 )
scale = Vector2( 0.357996, 0.357996 )

[node name="Player" parent="." index="5" instance=ExtResource( 8 )]

position = Vector2( 590.366, 1542.03 )
scale = Vector2( 0.99625, 0.99625 )

[node name="Button" parent="." index="6" instance=ExtResource( 9 )]

position = Vector2( 952.574, 188.99 )
scale = Vector2( 0.5, 0.5 )

[connection signal="monster_collision" from="Barrier" to="." method="_on_Barrier_monster_collision"]

[connection signal="button_pressed" from="Button" to="." method="_on_Button_button_pressed"]


